Erased and Renewed.
